--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
+    "eslint-config-next": "^14.0.4",
     "firebase": "^8.6.1",
-    "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-firebaseui": "^5.0.2"
   },
   "devDependencies": {
