--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-firebaseui": "^5.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.15",
     "tailwindcss": "^2.1.2"
