--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
+    "@react-google-maps/api": "^2.19.2",
     "axios": "^1.6.5",
     "eslint-config-next": "^14.0.4",
     "firebase": "^8.6.1",
